Canvis fins ara connexió pinbal