@@ -1,15 +1,12 @@
-package es.caib.pinbalmonitor.plugins.identitat;
+package es.caib.pinbalmonitor.plugins.policia;
 
-import es.caib.pinbal.client.recobriment.ClientGeneric;
 import es.caib.pinbal.client.recobriment.model.ScspFuncionario;
 import es.caib.pinbal.client.recobriment.model.ScspJustificante;
 import es.caib.pinbal.client.recobriment.model.ScspRespuesta;
-import es.caib.pinbal.client.recobriment.model.ScspSolicitante;
 import es.caib.pinbal.client.recobriment.model.ScspTitular;
-import es.caib.pinbal.client.recobriment.model.Solicitud;
 import es.caib.pinbal.client.recobriment.model.ScspSolicitante.ScspConsentimiento;
 import es.caib.pinbal.client.recobriment.model.ScspTitular.ScspTipoDocumentacion;
-import es.caib.pinbal.client.recobriment.svddgpviws02.ClientSvddgpviws02;
+import es.caib.pinbal.client.recobriment.svddgpciws02.ClientSvddgpciws02;
 import es.caib.pinbalmonitor.plugins.Configuracio;
 import es.caib.pinbalmonitor.plugins.FuncionariModel;
 import es.caib.pinbalmonitor.plugins.TitularModel;
@@ -30,7 +27,6 @@ import javax.validation.Valid;
 import java.io.IOException;
 import java.io.Serializable;
 import java.util.Arrays;
-import java.util.List;
 
 import static javax.faces.application.FacesMessage.SEVERITY_ERROR;
 
@@ -39,9 +35,9 @@ import static javax.faces.application.FacesMessage.SEVERITY_ERROR;
  *
  * @author areus
  */
-@Named("sviController")
+@Named("policiaController")
 @ViewScoped
-public class ServeiVerificacioIdentitatController implements Serializable {
+public class PoliciaClientController implements Serializable {
 
     Dotenv dotenv = Dotenv.configure()
         .directory("..")
@@ -51,15 +47,14 @@ public class ServeiVerificacioIdentitatController implements Serializable {
 
     private static final long serialVersionUID = 1L;
 
-    private static final Logger LOG = LoggerFactory.getLogger(ServeiVerificacioIdentitatController.class);
+    private static final Logger LOG = LoggerFactory.getLogger(PoliciaClientController.class);
 
     /**
      * Injecta l'API del client del servei de verificació d'identitat
      */
     private ScspTipoDocumentacion DNI = ScspTipoDocumentacion.NIF;
 
-
-
+    
     @Inject
     private Configuracio configuracio;
     @Inject
@@ -80,12 +75,11 @@ public class ServeiVerificacioIdentitatController implements Serializable {
     }
 
     private ScspRespuesta resposta;
-    private ClientGeneric clientSvddgpviws02 = new ClientGeneric(
-        // Posar a mà fins que funcioni:
-       dotenv.get("ENDPOINT"),
-       dotenv.get("USER"),
-       dotenv.get("SECRET")
-         );
+    private ClientSvddgpciws02 clientSvddgpciws02 = new ClientSvddgpciws02(
+        dotenv.get("ENDPOINT"),
+        dotenv.get("USUARI"),
+        dotenv.get("SECRET")
+        );
 
     public ScspRespuesta getResposta() {
         return resposta;
@@ -109,14 +103,14 @@ public class ServeiVerificacioIdentitatController implements Serializable {
     /**
      * Cridat en fer un submit del formulari per fer la consulta al servei.
      */
-    public boolean verificarIdentitat() {
-        LOG.info("verificarIdentitat");
+    public boolean confirmarIdentitat() {
+        LOG.info("confirmarIdentitat");
 
-        SolicitudVerificacion solicitud = new SolicitudVerificacion(null);
-        solicitud.setIdentificadorSolicitante("B07167448");
-        solicitud.setCodigoProcedimiento("ProvaConcepte");
-        solicitud.setUnidadTramitadora("Departament de test");
-        solicitud.setFinalidad("Test peticionSincrona");
+        ClientSvddgpciws02.SolicitudSvddgpciws02 solicitud = new ClientSvddgpciws02.SolicitudSvddgpciws02();
+        solicitud.setIdentificadorSolicitante("S0711001H");
+        solicitud.setCodigoProcedimiento("CODSVDR_GBA_20121107");
+        solicitud.setUnidadTramitadora("Servei d'escolarització");
+        solicitud.setFinalidad("Baremacions per el proces d'escolaritzacio");
         solicitud.setConsentimiento(ScspConsentimiento.Si);
         ScspFuncionario funcionario = new ScspFuncionario();
         funcionario.setNifFuncionario("00000000T");
@@ -127,7 +121,7 @@ public class ServeiVerificacioIdentitatController implements Serializable {
         titular.setDocumentacion("12345678Z");
         solicitud.setTitular(titular);
         try {
-            resposta = clientSvddgpviws02.peticionSincrona("SVDDGPVIWS02", List.of(solicitud));
+            resposta = clientSvddgpciws02.peticionSincrona(Arrays.asList(solicitud));
             LOG.info("resposta => " + getResposta());
             return true;
         } catch (Exception e) {
@@ -139,48 +133,12 @@ public class ServeiVerificacioIdentitatController implements Serializable {
 
 
     }
-    public static class SolicitudVerificacion extends Solicitud {
-		protected  String numeroSoporte;
-
-		public SolicitudVerificacion(String numeroSoporte) {
-			super();
-			this.numeroSoporte = numeroSoporte;
-		}
-
-		@Override
-		public String getDatosEspecificos() { // xml
-			StringBuilder xmlBuilder = new StringBuilder("<?xml version=\"1.0\" encoding=\"UTF-8\"?>");
-			xmlBuilder.append("<DatosEspecificos>");
-			if (numeroSoporte != null && !numeroSoporte.isEmpty()) {
-				xmlBuilder.append("<Consulta>");
-				xmlBuilder.append(
-						xmlOptionalStringParameter(this.numeroSoporte, "NumeroSoporte")
-				);
-				xmlBuilder.append("</Consulta>");
-			}
-			xmlBuilder.append("</DatosEspecificos>");
-			return xmlBuilder.toString();
-		}
-	}
-    
-	
-
-    
 
     /**
      * Cridat per obtenir el justificant de la petició en curs.
      * 
      * @throws IOException si es produeix un error de comunicació
      */
-   /*  public void descarregarJustificant() throws IOException {
-        if (resposta == null) {
-            throw new IllegalStateException("No hi ha resposta");
-        }
-
-        String idPeticio = resposta.getAtributos().getIdPeticion();
-        //ScspJustificante justificant = clientSvi.getJustificant(idPeticio);
-        download(justificant.getNom(), justificant.getContentType(), justificant.getContingut());
-    }*/
 
     /**
      * Mètode d'utilitat per descarregar un fitxer
